// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBottomNav.js should be hidden with a false value 1`] = `

<div class="v-item-group v-bottom-nav theme--light"
     style="height: 56px;"
>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should be visible with a true value 1`] = `

<div class="v-item-group v-bottom-nav theme--light v-bottom-nav--active"
     style="height: 56px;"
>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should have a v-bottom-nav class 1`] = `

<div class="v-item-group v-bottom-nav theme--light"
     style="height: 56px;"
>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should have prop classes 1`] = `

<div class="v-item-group v-bottom-nav theme--light v-bottom-nav--absolute v-bottom-nav--shift"
     style="height: 56px;"
>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
  <button type="button"
          class="v-btn theme--light"
  >
    <div class="v-btn__content">
    </div>
  </button>
</div>

`;
